--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures{
+        dataBinding = true
+        viewBinding = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -32,7 +37,7 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(dir: "libs",includes: ["*"])
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -40,4 +45,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //banner libs导入
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    //okhttp
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    //banner
+//    implementation 'com.youth.banner:banner:2.1.0'
+    //life
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    //nav
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    //KTX
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    //coil
+    implementation("io.coil-kt:coil:1.2.1")
 }
