--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,6 @@ android {
     buildFeatures{
         dataBinding = true
         viewBinding = true
-
     }
 
     buildTypes {
@@ -43,12 +42,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //RecyclerViewAD
-    implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7"
-
+    implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4"
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     //banner libs导入
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -65,4 +67,29 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     //coil
     implementation("io.coil-kt:coil:1.2.1")
+    //lottie JSON动画库使用
+    implementation "com.airbnb.android:lottie:5.0.3"
+    //协程
+    //okhttp io流处理
+    implementation "com.squareup.okio:okio:2.3.0"
+    //协程依赖
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-RC-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0-RC-native-mt'
+
+    implementation "androidx.activity:activity-ktx:1.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
+
+    // 基础依赖包，必须要依赖
+    implementation 'com.geyifeng.immersionbar:immersionbar:3.2.1'
+    // kotlin扩展（可选）
+    implementation 'com.geyifeng.immersionbar:immersionbar-ktx:3.2.1'
+    // fragment快速实现（可选）
+    implementation 'com.geyifeng.immersionbar:immersionbar-components:3.2.1'
+
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
+
+    // To use only without reflection variants of viewBinding
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
+    //TextFieldBoxes
+    implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
 }
