--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,17 @@
         android:supportsRtl="true"
         android:resizeableActivity="true"
         android:theme="@style/Theme.ZYY_SendWater">
-        <activity android:name=".ui.activity.StartActivity"
-            android:exported="true"/>
+        <activity android:name=".ui.activity.LoginActivity"
+            android:exported="true"
+            android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.test.TestActivity2"
             android:exported="true"/>
         <activity android:name=".ui.activity.test.TestActivity1"
             android:exported="true"/>
-        <activity android:name=".ui.activity.MainActivity"
+        <activity android:name=".ui.activity.StartActivity"
             android:exported="true"/>
         <activity
-            android:name=".ui.activity.LoginActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
