--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -20,6 +21,7 @@ android {
         dataBinding = true
         viewBinding = true
     }
+
 
     buildTypes {
         release {
@@ -79,6 +81,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.0"
     implementation "androidx.fragment:fragment-ktx:1.3.0"
 
+    kapt 'androidx.room:room-compiler:2.2.3'
     // 基础依赖包，必须要依赖
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.1'
     // kotlin扩展（可选）
@@ -92,4 +95,5 @@ dependencies {
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
     //TextFieldBoxes
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
