--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //RecyclerViewAD
-    implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     //banner libs导入
@@ -59,7 +59,7 @@ dependencies {
     //okhttp
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     //banner
-//    implementation 'com.youth.banner:banner:2.1.0'
+    implementation 'io.github.youth5201314:banner:2.2.2'
     //life
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     //nav
@@ -96,4 +96,9 @@ dependencies {
     //TextFieldBoxes
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //datastore
+    implementation("androidx.datastore:datastore:1.0.0")
+    implementation("androidx.datastore:datastore-core:1.0.0")
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 }
